--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -899,7 +899,7 @@ code {
 .button:focus,
 .button:hover,
 .button.hover {
-  background-color: rgba(255, 255, 255, 0.5); }
+  opacity: .8; }
 
 .tabs-title > a {
   border-bottom: none; }
