--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -847,7 +847,7 @@ code { font-size: .95rem; }
 // buttons
 .button:focus,
 .button:hover,
-.button.hover { background-color: rgba(255,255,255,.5);}
+.button.hover { opacity: .8;}
 // tabs
 .tabs-title > {
   a { border-bottom: none; }
