--- a/css/theme-ebi-research.css
+++ b/css/theme-ebi-research.css
@@ -32,11 +32,7 @@ a.tag:hover { color: #fff; }
 
 .tabs-title > a:hover,
 .button.primary:hover,
-.button.primary:focus,
-.button.hover,
-.button:hover,
-.button:focus,
-.button:active { background: rgba(109,171,73,.9); }
+.button.primary:focus { background: rgba(109,171,73,.9); }
 
 .tabs-title > a:focus,
 .tabs-title > a[aria-selected='true'] {
