--- a/css/theme-ebi-training.css
+++ b/css/theme-ebi-training.css
@@ -33,12 +33,7 @@ a.tag:hover { color: #fff; }
 
 .tabs-title > a:hover,
 .button.primary:hover,
-.button.primary:focus,
-.button.hover,
-.button:hover,
-.button:focus,
-.button:active { background: rgba(233,180,0,.9); }
-
+.button.primary:focus { background: rgba(233,180,0,.9); }
 .tabs-title > a:focus,
 .tabs-title > a[aria-selected='true'] {
   color: #fff;
