--- a/css/theme-embl-petrol.css
+++ b/css/theme-embl-petrol.css
@@ -32,12 +32,7 @@ a.tag:hover { color: #fff; }
 
 .tabs-title > a:hover,
 .button.primary:hover,
-.button.primary:focus,
-.button.hover,
-.button:hover,
-.button:focus,
-.button:active { background: rgba(0,124,130,.9); }
-
+.button.primary:focus { background: rgba(0,124,130,.9); }
 .tabs-title > a:focus,
 .tabs-title > a[aria-selected='true'] {
   color: #fff;
