--- a/css/foundation/_settings-common.scss
+++ b/css/foundation/_settings-common.scss
@@ -592,7 +592,7 @@ $tab-item-padding: 1.25rem 1.5rem;
 $tab-expand-max: 6;
 $tab-content-background: $white;
 $tab-content-border: $light-gray;
-$tab-content-color: foreground($tab-background, $primary-color);
+$tab-content-color: foreground($tab-background, $ebi-colour-dark);
 $tab-content-padding: 1rem;
 
 // 33. Thumbnail
