Update to refer to EMBL Rome

--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -291,7 +291,7 @@ a:active {
 
     /* EMBL Dropdwon styles */
     .dropdown-pane.embl-dropdown {
-      background-color: #007c82;
+      background-color: #333;
       background-image: url('../images/map.png');
       background-position: 100% 100%;
       background-repeat: no-repeat;
