--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -214,12 +214,12 @@ a:active {
 
   /* EMBL Dropdwon styles */
   #embl-dropdown {
-    background-color: #007c82;
+    background-color: #333;
     background-image: url('../images/map.png');
     background-position: 100% 100%;
     background-repeat: no-repeat;
     color: #fff;
-    height: 20rem;
+    height: 21rem;
     padding-right: 17rem;
     min-width: 39.9375em;
   }
