--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -32,7 +32,7 @@ $dark-gray: #8a8a8a;
 
 $body-background: $ebi-colour-white;
 $body-font-color: $ebi-colour-dark;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $body-font-family-serif: 'EB Garamond', 'georgia', serif;
 
 // Label tweaks
