--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -1,4 +1,5 @@
-// EBI Colours
+// Colours
+// https://wwwdev.ebi.ac.uk/style-lab/general/#embl-ebi-official-colours
 $ebi-colour-dark: #222;
 $ebi-colour-light: #f8f8f8;
 $ebi-colour-dark-grey: #666;;
