--- a/libraries/foundation-6/css/foundation-lite.css
+++ b/libraries/foundation-6/css/foundation-lite.css
@@ -445,7 +445,7 @@ body {
   margin: 0;
   padding: 0;
   background: white;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #222;
@@ -1322,7 +1322,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: inherit;
