--- a/css/foundation/_settings-full-fat.scss
+++ b/css/foundation/_settings-full-fat.scss
@@ -4,6 +4,10 @@
  * It is the default an we expect it to be the most commonly used version.
  */
 
+// Include all EBI branding
+$include-ebi-global-styles: true !global;
+@import '../ebi-global.scss';
+
 // Include the common settings
 @import 'settings-common';
 
@@ -73,3 +77,8 @@
 
 // ebi-specific fixes
 @include ebi-foundation-overides;
+
+// ebi-styles
+@if $include-ebi-global-styles {
+  @include ebi-base-styles;
+}
