--- a/css/foundation/_settings-extras.scss
+++ b/css/foundation/_settings-extras.scss
@@ -6,8 +6,9 @@
  */
 
 // Include all EBI branding
-// $include-ebi-global-styles: false !global;
-// @import '../ebi-global.scss';
+$include-ebi-global-styles: false !global;
+$include-ebi-extra-styles: true !global;
+@import '../ebi-global.scss';
 
 // Include the common settings
 @import 'settings-common';
@@ -80,6 +81,12 @@
 // @include ebi-foundation-overides;
 
 // ebi-styles
-// @if $include-ebi-global-styles {
-//   @include ebi-base-styles;
-// }
+@if $include-ebi-global-styles {
+  @include ebi-base-styles;
+  @include ebi-utility-styles;
+}
+@if $include-ebi-extra-styles {
+  @include ebi-print-styles;
+  @include ebi-clearable-inputs;
+  @include ebi-table-styles;
+}
