--- a/css/foundation/_settings-full-fat.scss
+++ b/css/foundation/_settings-full-fat.scss
@@ -6,6 +6,7 @@
 
 // Include all EBI branding
 $include-ebi-global-styles: true !global;
+$include-ebi-extra-styles: true !global;
 @import '../ebi-global.scss';
 
 // Include the common settings
@@ -81,4 +82,10 @@ $include-ebi-global-styles: true !global;
 // ebi-styles
 @if $include-ebi-global-styles {
   @include ebi-base-styles;
+  @include ebi-utility-styles;
+}
+@if $include-ebi-extra-styles {
+  @include ebi-print-styles;
+  @include ebi-clearable-inputs;
+  @include ebi-table-styles;
 }
