--- a/css/ebi-css-build/foundation/_settings-full-fat.scss
+++ b/css/ebi-css-build/foundation/_settings-full-fat.scss
@@ -4,10 +4,7 @@
  * It is the default an we expect it to be the most commonly used version.
  */
 
-// Include all EBI branding
-$include-ebi-global-styles: true !global;
-$include-ebi-extra-styles: true !global;
-@import '../ebi-global.scss';
+ @import '../ebi_dev_note';
 
 // Include the common settings
 @import 'settings-common';
@@ -79,13 +76,7 @@ $include-ebi-extra-styles: true !global;
 // ebi-specific fixes
 @include ebi-foundation-overides;
 
-// ebi-styles
-@if $include-ebi-global-styles {
-  @include ebi-base-styles;
-  @include ebi-utility-styles;
-}
-@if $include-ebi-extra-styles {
-  @include ebi-print-styles;
-  @include ebi-clearable-inputs;
-  @include ebi-table-styles;
-}
+// Include all EBI branding
+$include-ebi-global-styles: true !global;
+$include-ebi-extra-styles: true !global;
+@import '../ebi-global.scss';
