--- a/css/ebi-css-build/foundation/_settings-lite.scss
+++ b/css/ebi-css-build/foundation/_settings-lite.scss
@@ -6,10 +6,7 @@
  * compatibility issues.
  */
 
-// Include all EBI branding
-$include-ebi-global-styles: false !global;
-$include-ebi-extra-styles: true !global;
-@import '../ebi-global.scss';
+ @import '../ebi_dev_note';
 
 // Include the common settings
 @import 'settings-common';
@@ -81,14 +78,7 @@ $include-ebi-extra-styles: true !global;
 // ebi-specific fixes
 @include ebi-foundation-overides;
 
-// ebi-styles
-// ebi-styles
-@if $include-ebi-global-styles {
-  @include ebi-base-styles;
-  @include ebi-utility-styles;
-}
-@if $include-ebi-extra-styles {
-  @include ebi-print-styles;
-  @include ebi-clearable-inputs;
-  @include ebi-table-styles;
-}
+// Include all EBI branding
+$include-ebi-global-styles: false !global;
+$include-ebi-extra-styles: true !global;
+@import '../ebi-global.scss';
