Add external link for v1.3 #110

--- a/css/ebi-css-build/ebi-global.scss
+++ b/css/ebi-css-build/ebi-global.scss
@@ -341,6 +341,18 @@
     .lead { color: $secondary-color; margin-bottom: .5rem; }
   }
 
+  // external links
+  a.external{
+    &:after {
+      content: " x";
+      font-family: "EBI-Generic";
+      font-size: .65rem;
+      position: relative;
+      top: -1px;
+      margin-left: .4rem;
+    }
+  }
+
   // read more
   a.read-more,
   a.readmore,
